[package]
name = "secure-string"
version = "0.2.0"
authors = ["Sebastian Schmidt <isibboi@gmail.com>"]
keywords = ["Security", "Memory"]
description = "A data type suitable for storing sensitive information such as passwords and private keys in memory, featuring constant time equality, mlock and zeroing out."
license = "Unlicense"
readme = "README.md"
repository = "https://github.com/ISibboI/secure-string"
documentation = "https://docs.rs/secure-string/"
edition = "2021"

[dependencies]
libc = "0.2.148"
zeroize = { version = "1.6.0", features = ["std"] }
serde = { version = "1.0.188", optional = true }

[dev-dependencies]
pre = "0.2.1"
serde_cbor = "0.11"
serde_json = "1.0.105"
